--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,31 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <input 
+          type="text" 
+          id="name-input" 
+          name="name" 
+          class="popup__input popup__input_type_name" 
+          placeholder="Имя" 
+          minlength="2" 
+          maxlength="40" 
+          pattern="^[a-zA-Zа-яёА-ЯЁ\s\-]+$" 
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+        required>
+        <span class="name-input-error form__input-error"></span>
+        <input 
+          type="text" 
+          name="description" 
+          id="description-input" 
+          class="popup__input popup__input_type_description" 
+          placeholder="Занятие" 
+          minlength="2" 
+          maxlength="200"
+          pattern="^[a-zA-Zа-яёА-ЯЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+        required>
+        <span class="description-input-error form__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -48,9 +70,28 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="new-place" novalidate>
+        <input 
+          type="text" 
+          name="place-name" 
+          id="place-name-input" 
+          class="popup__input popup__input_type_card-name" 
+          placeholder="Название" 
+          minlength="2" 
+          maxlength="30"
+          pattern="^[a-zA-Zа-яёА-ЯЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+        required>
+        <span class="place-name-input-error form__input-error"></span>
+        <input 
+          type="url" 
+          name="link" 
+          id="link-input" 
+          class="popup__input popup__input_type_url" 
+          placeholder="Ссылка на картинку" 
+          type="url" 
+        required>
+        <span class="link-input-error form__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
