--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,11 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image"></div>
-      
+      <div class="profile__image">
+        <div class="overlay">
+          <div class="icon"></div>
+        </div>        
+      </div>  
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
